gcc/testsuite/g++.dg/other/locations1.C
void foo(static int p);  // { dg-error "10:storage class specified" }
